--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-POSTGRES_CONNECTION_STRING=postgres://postgres:@127.0.0.1:53111/devdb?schema=public
+POSTGRES_CONNECTION_STRING=postgres://postgres:@127.0.0.1:53111/devdb?schema=test_task20240318
 JWT_SECRET=STRONG_JWT_SECRET
 JWT_REFRESH_SECRET=STRONG_JWT_REFRESH_SECRET
 JWT_TTL_MINUTES=60
